--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-/*Intro Page*/
+@import "./assets/styles/variables";
 .intro-page {
   width: 100%;
   height: 100vh;
@@ -36,13 +36,13 @@
 }
 .intro-page__content .photo-box .photo-box__title {
   font-size: 20px;
-  color: #fff;
+  color: $mainCol;
   margin-bottom: 5px;
   font-weight: 600;
 }
 .intro-page__content .photo-box .photo-box__description {
-  font-size: 14px;
-  color: #fff;
+  font-size: $textFontSize;
+  color: $mainCol;
   text-align: center;
   line-height: 21px;
 }
@@ -51,7 +51,7 @@
   margin: auto;
 }
 .intro-page__content .button:hover {
-  background-color: #26c17e;
+  background-color: $headingCol;
 }
 .intro-page__button {
   text-decoration: none;
@@ -60,7 +60,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5921568627);
+  background-color: $shadowCol;
   z-index: 0;
 }
 
@@ -68,7 +68,7 @@
 .aside {
   max-width: 250px;
   position: relative;
-  background-color: #222935;
+  background-color: $asideCol;
   transition: transform 0.3s ease;
 }
 .aside--hidden {
@@ -89,16 +89,16 @@
   margin-left: 20px;
 }
 .nav-bar__icon {
-  font-size: 14px;
+  font-size: $textFontSize;
   margin-right: 15px;
 }
 .nav-bar__link {
   text-decoration: none;
-  color: #667081;
+  color: $eventCol;
   transition: color 0.3s ease;
 }
 .nav-bar__link:hover {
-  color: #26c17e;
+  color: $headingCol;
 }
 .nav-bar .button {
   border-top-left-radius: 0;
@@ -213,7 +213,7 @@
   margin: 0 auto;
 }
 .timeline-event__details .info__title {
-  font-weight: 700;
+  font-weight: $headingFontWeight;
 }
 .timeline-event__details .info__title,
 .timeline-event__details .info__text {
@@ -230,14 +230,14 @@
   left: -10px;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 10px solid #eee;
+  border-right: 10px solid $borderCol;
 }
 
 .timeline-event__line {
   width: 3px;
   height: 100px;
   margin-top: 20px;
-  background-color: #26c17e;
+  background-color: $headingCol;
 }
 
 /* 
@@ -254,7 +254,7 @@ Experience section
   right: auto;
   bottom: auto;
   left: 0;
-  color: #667081;
+  color: $eventCol;
 }
 
 .expertise__info {
@@ -264,14 +264,14 @@ Experience section
   align-items: center;
 }
 .expertise__info-company {
-  font-weight: 700;
+  font-weight: $headingFontWeight;
   justify-self: start;
   align-self: baseline;
 }
 .expertise__info-job,
 .expertise__info-company {
-  font-weight: 700;
-  font-size: 16px;
+  font-weight: $headingFontWeight;
+  font-size: $headingFontSize;
 }
 .expertise__info-description {
   grid-column: 2;
@@ -294,10 +294,10 @@ Experience section
   background-color: transparent;
 }
 .portfolio__filter button:hover {
-  color: #26c17e;
+  color: $headingCol;
 }
 .portfolio__filter .active {
-  color: #26c17e;
+  color: $headingCol;
 }
 
 .portfolio__items {
@@ -307,7 +307,7 @@ Experience section
 }
 
 .portfolio-item {
-  border: 1px solid #ccc;
+  border: 1px solid $secCol;
   transition: all 0.3s ease;
   display: flex;
   margin-right: 30px;
@@ -330,7 +330,7 @@ Experience section
   left: 0;
   width: 100%;
   height: 0;
-  background: rgba(255, 255, 255, 0.8588235294);
+  background: $cardCol;
   overflow: hidden;
   transition: height 0.3s ease-in-out;
 }
@@ -347,10 +347,10 @@ Experience section
   justify-content: flex-start;
   align-items: stretch;
   flex-wrap: nowrap;
-  font-family: "Open Sans", "sans-serif";
-  font-size: 16px;
-  font-weight: 400;
-  color: #222935;
+  font-family: $mainFont, $callbackFont;
+  font-size: $headingFontSize;
+  font-weight: $textFontWeight;
+  color: $asideCol;
   gap: 30px;
 }
 .contact-list__item {
@@ -363,11 +363,11 @@ Experience section
 }
 .contact-list_phone,
 .contact-list__platform {
-  color: #000;
-  font-weight: 700;
+  color: $textCol;
+  font-weight: $headingFontWeight;
 }
 .contact-list_email {
-  font-weight: 700;
+  font-weight: $headingFontWeight;
 }
 .contact-list__info {
   display: inline-block;
@@ -376,17 +376,17 @@ Experience section
 .contact-list__icon {
   cursor: pointer;
   text-decoration: none;
-  color: #000;
+  color: $textCol;
   gap: 20px;
 }
 .contact-list__icon:hover {
   text-decoration: underline;
 }
 .contact-list__icon-icon {
-  font-family: "Open Sans", "sans-serif";
-  font-size: 25px;
-  font-weight: 700;
-  color: #26c17e;
+  font-family: $mainFont, $callbackFont;
+  font-size: $mainHeadingFontSize;
+  font-weight: $headingFontWeight;
+  color: $headingCol;
   margin-right: 20px;
 }
 .contact-list__icon-image {
@@ -415,7 +415,7 @@ Experience section
 }
 
 .feedback__author-details {
-  font-size: 14px;
+  font-size: $textFontSize;
 }
 
 .feedback__author-name {
@@ -424,7 +424,7 @@ Experience section
 
 .feedback__citeurl-link {
   text-decoration: none;
-  color: #26c17e;
+  color: $headingCol;
 }
 
 @media only screen and (max-width: 800px) {
@@ -480,7 +480,7 @@ Experience section
     display: none;
   }
   .nav-bar__link span.icon svg {
-    width: 14px;
+    width: $textFontSize;
   }
   .nav-bar__link .nav-bar__label {
     display: none;
@@ -498,7 +498,7 @@ Experience section
     transition: transform 0.3s ease;
   }
   .main-container-button--nav .button__icon {
-    font-size: 16px;
+    font-size: $headingFontSize;
     padding: 0px 3px;
     transition: transform 0.3s ease;
   }
@@ -640,20 +640,20 @@ table {
 }
 
 body {
-  font-family: "Open Sans", "sans-serif";
-  font-size: 14px;
-  font-weight: 400;
-  color: #000;
+  font-family: $mainFont, $callbackFont;
+  font-size: $textFontSize;
+  font-weight: $textFontWeight;
+  color: $textCol;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
 h2 {
-  font-family: "Open Sans", "sans-serif";
-  font-size: 25px;
-  font-weight: 700;
-  color: #26c17e;
+  font-family: $mainFont, $callbackFont;
+  font-size: $mainHeadingFontSize;
+  font-weight: $headingFontWeight;
+  color: $headingCol;
   line-height: 30px;
   margin-bottom: 30px;
   margin-top: 60px;
@@ -666,11 +666,11 @@ h2 {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
-  padding-top: 25px;
+  padding-top: $mainHeadingFontSize;
   margin-bottom: 50px;
 }
 .photo-box__name {
-  color: #fff;
+  color: $mainCol;
   margin: 0px;
 }
 .photo-box__avatar {
@@ -690,8 +690,8 @@ h2 {
 
 /*Button*/
 .button {
-  background-color: #222935;
-  color: #fff;
+  background-color: $asideCol;
+  color: $mainCol;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -700,11 +700,11 @@ h2 {
 }
 
 .aside .button:hover {
-  background-color: #26c17e;
+  background-color: $headingCol;
 }
 
 .button .button__icon {
-  color: #fff;
+  color: $mainCol;
 }
 
 .main-container-button .button__icon {
