--- a/src/components/Feedback/feedback.scss
+++ b/src/components/Feedback/feedback.scss
@@ -18,7 +18,7 @@
 }
 
 .feedback__author-details {
-  font-size: $textFontSize;
+  font-size: 14px;
 }
 
 .feedback__author-name {
@@ -27,5 +27,5 @@
 
 .feedback__citeurl-link {
   text-decoration: none;
-  color: $headingCol;
+  color: #26c17e;
 }
