--- a/src/components/Photobox/photobox.scss
+++ b/src/components/Photobox/photobox.scss
@@ -4,11 +4,11 @@
   justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
-  padding-top: $mainHeadingFontSize;
+  padding-top: 25px;
   margin-bottom: 50px;
 }
 .photo-box__name {
-  color: $mainCol;
+  color: #fff;
   margin: 0px;
 }
 .photo-box__avatar {
