--- a/src/App.scss
+++ b/src/App.scss
@@ -1,110 +1,15 @@
+@import "./assets/styles/aside";
 @import "./assets/styles/variables";
-.intro-page {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
-}
-.intro-page__background-image {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  object-fit: cover;
-  z-index: -1;
-}
-.intro-page__content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-  flex-wrap: nowrap;
-}
-.intro-page__content .photo-box {
-  margin-bottom: 20px;
-}
-.intro-page__content .photo-box .photo-box__name {
-  font-size: 40px;
-  margin-bottom: 15px;
-}
-.intro-page__content .photo-box .photo-box__avatar {
-  width: 150px;
-}
-.intro-page__content .photo-box .photo-box__title {
-  font-size: 20px;
-  color: $mainCol;
-  margin-bottom: 5px;
-  font-weight: 600;
-}
-.intro-page__content .photo-box .photo-box__description {
-  font-size: $textFontSize;
-  color: $mainCol;
-  text-align: center;
-  line-height: 21px;
-}
-.intro-page__content .button {
-  display: block;
-  margin: auto;
-}
-.intro-page__content .button:hover {
-  background-color: $headingCol;
-}
-.intro-page__button {
-  text-decoration: none;
-}
-.intro-page__shadow {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: $shadowCol;
-  z-index: 0;
-}
-
-/* Aside */
-.aside {
-  max-width: 250px;
-  position: relative;
-  background-color: $asideCol;
-  transition: transform 0.3s ease;
-}
-.aside--hidden {
-  transform: translateX(-250px);
-}
-
-.nav-bar {
-  width: 250px;
-}
-.nav-bar__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-wrap: nowrap;
-  max-width: 250px;
-  gap: 30px;
-  margin-left: 20px;
-}
-.nav-bar__icon {
-  font-size: $textFontSize;
-  margin-right: 15px;
-}
-.nav-bar__link {
-  text-decoration: none;
-  color: $eventCol;
-  transition: color 0.3s ease;
-}
-.nav-bar__link:hover {
-  color: $headingCol;
-}
-.nav-bar .button {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
+@import "./assets/styles/intro-page";
+@import "./components/Expertise/experience.scss";
+@import "./components/Timeline/timeline.scss";
+@import "./components/Portfolio/portfolio.scss";
+@import "./components/Feedback/feedback.scss";
+@import "./assets/styles/reset";
+@import "./components/Photobox/photobox.scss";
+@import "./components/Button/button.scss";
+@import "./assets/styles/mobile";
+@import "./assets/styles/contact";
 /* Main */
 .main {
   margin: 20px;
@@ -169,556 +74,4 @@
 .layout-section {
   display: flex;
   position: relative;
-}
-
-/* Timeline Section */
-.education {
-  height: 100%;
-}
-.education__timeline {
-  padding: 20px;
-  height: 30vh;
-  max-height: 80vh;
-}
-.education__timeline-container {
-  height: 100%;
-  overflow-y: auto;
-}
-.education__timeline-event {
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-wrap: nowrap;
-}
-
-.timeline-event__date {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  font-weight: bold;
-  margin-right: 20px;
-}
-
-.timeline-event__title {
-  margin-bottom: 10px;
-}
-
-.timeline-event__details {
-  position: relative;
-  flex: 1;
-  margin: 0 auto;
-}
-.timeline-event__details .info__title {
-  font-weight: $headingFontWeight;
-}
-.timeline-event__details .info__title,
-.timeline-event__details .info__text {
-  margin: 10px 0;
-}
-
-.timeline-event__arrow {
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: 15px;
-  right: auto;
-  bottom: auto;
-  left: -10px;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-right: 10px solid $borderCol;
-}
-
-.timeline-event__line {
-  width: 3px;
-  height: 100px;
-  margin-top: 20px;
-  background-color: $headingCol;
-}
-
-/* 
-Experience section
-*/
-.expertise__item {
-  position: relative;
-  margin-bottom: 50px;
-}
-
-.expertise__date {
-  position: absolute;
-  top: 27px;
-  right: auto;
-  bottom: auto;
-  left: 0;
-  color: $eventCol;
-}
-
-.expertise__info {
-  display: grid;
-  grid-template-columns: 130px 1fr;
-  grid-template-rows: 1fr;
-  align-items: center;
-}
-.expertise__info-company {
-  font-weight: $headingFontWeight;
-  justify-self: start;
-  align-self: baseline;
-}
-.expertise__info-job,
-.expertise__info-company {
-  font-weight: $headingFontWeight;
-  font-size: $headingFontSize;
-}
-.expertise__info-description {
-  grid-column: 2;
-  margin-top: 5px;
-}
-
-/* Portfolio section */
-.portfolio__container {
-  margin: 20px;
-}
-
-.portfolio__filter {
-  margin-bottom: 20px;
-  display: block;
-}
-.portfolio__filter button {
-  margin-right: 10px;
-  cursor: pointer;
-  border: transparent;
-  background-color: transparent;
-}
-.portfolio__filter button:hover {
-  color: $headingCol;
-}
-.portfolio__filter .active {
-  color: $headingCol;
-}
-
-.portfolio__items {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.portfolio-item {
-  border: 1px solid $secCol;
-  transition: all 0.3s ease;
-  display: flex;
-  margin-right: 30px;
-}
-.portfolio-item__image {
-  width: 200px;
-}
-
-.portfolio__title,
-.portfolio__content,
-.portfolio__link {
-  margin-bottom: 5px;
-}
-
-.portfolio__info {
-  position: absolute;
-  top: auto;
-  right: auto;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0;
-  background: $cardCol;
-  overflow: hidden;
-  transition: height 0.3s ease-in-out;
-}
-
-.portfolio-item:hover .portfolio__info {
-  padding: 15px;
-  height: 100%;
-}
-
-/*Contact section */
-.contact-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-wrap: nowrap;
-  font-family: $mainFont, $callbackFont;
-  font-size: $headingFontSize;
-  font-weight: $textFontWeight;
-  color: $asideCol;
-  gap: 30px;
-}
-.contact-list__item {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  gap: 20px;
-}
-.contact-list_phone,
-.contact-list__platform {
-  color: $textCol;
-  font-weight: $headingFontWeight;
-}
-.contact-list_email {
-  font-weight: $headingFontWeight;
-}
-.contact-list__info {
-  display: inline-block;
-  margin-right: 15px;
-}
-.contact-list__icon {
-  cursor: pointer;
-  text-decoration: none;
-  color: $textCol;
-  gap: 20px;
-}
-.contact-list__icon:hover {
-  text-decoration: underline;
-}
-.contact-list__icon-icon {
-  font-family: $mainFont, $callbackFont;
-  font-size: $mainHeadingFontSize;
-  font-weight: $headingFontWeight;
-  color: $headingCol;
-  margin-right: 20px;
-}
-.contact-list__icon-image {
-  width: 30px;
-  height: 30px;
-}
-
-/* Feedback section */
-.feedback__item {
-  margin-bottom: 40px;
-}
-
-.feedback__reporter {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  gap: 15px;
-  margin-top: 15px;
-}
-.feedback__reporter-photo {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-
-.feedback__author-details {
-  font-size: $textFontSize;
-}
-
-.feedback__author-name {
-  margin-right: 5px;
-}
-
-.feedback__citeurl-link {
-  text-decoration: none;
-  color: $headingCol;
-}
-
-@media only screen and (max-width: 800px) {
-  .portfolio__items {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-end;
-    flex-wrap: nowrap;
-  }
-  .portfolio-item {
-    margin-bottom: 20px;
-    margin-left: 20%;
-  }
-  .portfolio-item__image {
-    width: 250px;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .intro-page__content .photo-box .photo-box__description {
-    margin: 10px 20px;
-  }
-  .intro-page__content .photo-box .photo-box__name {
-    font-size: 35px;
-  }
-  .nav-ul {
-    width: 50px;
-  }
-  .aside {
-    width: 50px;
-  }
-  .aside .button {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: stretch;
-    flex-wrap: nowrap;
-    padding: 5px;
-    margin: auto;
-    margin-right: 0;
-  }
-  .aside .button .button__icon {
-    margin-right: 0;
-  }
-  .aside .button__text {
-    display: none;
-  }
-  .aside .photo-box .photo-box__avatar {
-    width: 30px;
-    margin-bottom: 10px;
-  }
-  .aside .photo-box .photo-box__name {
-    display: none;
-  }
-  .nav-bar__link span.icon svg {
-    width: $textFontSize;
-  }
-  .nav-bar__link .nav-bar__label {
-    display: none;
-  }
-  .nav-button {
-    left: 50px;
-  }
-  .main-container-button--nav {
-    position: absolute;
-    top: 20px;
-    right: auto;
-    bottom: auto;
-    left: 50px;
-    border-radius: 0;
-    transition: transform 0.3s ease;
-  }
-  .main-container-button--nav .button__icon {
-    font-size: $headingFontSize;
-    padding: 0px 3px;
-    transition: transform 0.3s ease;
-  }
-  .education__timeline {
-    padding: 20px;
-    height: 80vh;
-  }
-}
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body {
-  font-family: $mainFont, $callbackFont;
-  font-size: $textFontSize;
-  font-weight: $textFontWeight;
-  color: $textCol;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h1,
-h2 {
-  font-family: $mainFont, $callbackFont;
-  font-size: $mainHeadingFontSize;
-  font-weight: $headingFontWeight;
-  color: $headingCol;
-  line-height: 30px;
-  margin-bottom: 30px;
-  margin-top: 60px;
-}
-
-/* Photobox */
-.photo-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  padding-top: $mainHeadingFontSize;
-  margin-bottom: 50px;
-}
-.photo-box__name {
-  color: $mainCol;
-  margin: 0px;
-}
-.photo-box__avatar {
-  width: 100px;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-/* About section */
-.about__heading {
-  margin-top: 20px;
-}
-
-.about__text {
-  line-height: 21px;
-}
-
-/*Button*/
-.button {
-  background-color: $asideCol;
-  color: $mainCol;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  padding: 10px 20px;
-}
-
-.aside .button:hover {
-  background-color: $headingCol;
-}
-
-.button .button__icon {
-  color: $mainCol;
-}
-
-.main-container-button .button__icon {
-  display: flex;
-  justify-content: center;
-  transition: transform 0.3s ease;
-}
-
-.aside #aside-button_left {
-  position: absolute;
-  top: auto;
-  right: auto;
-  bottom: 0;
-  left: 0;
-  margin-left: 25%;
-  margin-bottom: 5px;
 }
