--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -13,10 +13,10 @@
   background-color: transparent;
 }
 .portfolio__filter button:hover {
-  color: $headingCol;
+  color: #26c17e;
 }
 .portfolio__filter .active {
-  color: $headingCol;
+  color: #26c17e;
 }
 
 .portfolio__items {
@@ -26,7 +26,7 @@
 }
 
 .portfolio-item {
-  border: 1px solid $secCol;
+  border: 1px solid #ccc;
   transition: all 0.3s ease;
   display: flex;
   margin-right: 30px;
@@ -49,7 +49,7 @@
   left: 0;
   width: 100%;
   height: 0;
-  background: $cardCol;
+  background: rgba(255, 255, 255, 0.8588235294);
   overflow: hidden;
   transition: height 0.3s ease-in-out;
 }
