--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -7,6 +7,7 @@ $secCol: #ccc;
 $shadowCol: #00000097;
 $cardCol: #ffffffdb;
 $borderCol: #eee;
+$errorCol: #ff0000;
 
 $colorHighlight: $mainCol, $headingCol, $textCol, $asideCol, $eventCol, $secCol,
   $shadowCol, $cardCol, $borderCol;
