--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -30,6 +30,7 @@
   transition: all 0.3s ease;
   display: flex;
   margin-right: 30px;
+  margin-bottom: 20px;
 }
 .portfolio-item__image {
   width: 200px;
