--- a/src/App.scss
+++ b/src/App.scss
@@ -46,7 +46,6 @@
   top: 20px;
   right: auto;
   bottom: auto;
-  left: 250px;
   border-radius: 0;
   transition: transform 0.3s ease;
 }
@@ -76,4 +75,5 @@
 .layout-section {
   display: flex;
   position: relative;
+  overflow: hidden;
 }
