--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 @import "./assets/styles/mobile";
 @import "./assets/styles/contact";
 @import "./components/Skills/skills.scss";
-/* Main */
+@import "./components/Address/adress.scss"; /* Main */
 .main {
   margin: 20px;
   margin-bottom: 0;
