--- a/src/components/Address/adress.scss
+++ b/src/components/Address/adress.scss
@@ -10,6 +10,9 @@
   color: $asideCol;
   gap: 30px;
 }
+#contact {
+  margin-bottom: 50px;
+}
 .contact-list__item {
   display: flex;
   flex-direction: row;
@@ -49,4 +52,9 @@
 .contact-list__icon-image {
   width: 30px;
   height: 30px;
+}
+.top-scroll {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
